[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/background/stars_far.png" type="Texture" id=1]
[ext_resource path="res://sauce/stars_far.gd" type="Script" id=2]
[ext_resource path="res://assets/background/stars_close.png" type="Texture" id=3]
[ext_resource path="res://sauce/Enemies/EnemySpawner.gd" type="Script" id=4]
[ext_resource path="res://sauce/player.gd" type="Script" id=5]
[ext_resource path="res://assets/sprite/player/yousei.png" type="Texture" id=6]
[ext_resource path="res://assets/sprite/player/yousei-1.png" type="Texture" id=7]
[ext_resource path="res://assets/sprite/player/yousei-2.png" type="Texture" id=8]
[ext_resource path="res://assets/soundFX/shatter.ogg" type="AudioStream" id=9]
[ext_resource path="res://sauce/HUD.gd" type="Script" id=10]
[ext_resource path="res://assets/HUD/timebar_background.png" type="Texture" id=11]
[ext_resource path="res://assets/HUD/timebar_border.png" type="Texture" id=12]
[ext_resource path="res://assets/HUD/timebar_filling.png" type="Texture" id=13]
[ext_resource path="res://assets/HUD/hp_border.png" type="Texture" id=14]
[ext_resource path="res://assets/HUD/hp_filling.png" type="Texture" id=15]
[ext_resource path="res://assets/background/shatter.png" type="Texture" id=16]
[ext_resource path="res://sauce/Shatter.gd" type="Script" id=17]
[ext_resource path="res://sauce/PowerUp/PowerUpSpawner.gd" type="Script" id=18]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 3.97334, 12.031 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 60.0
} ]

[node name="World" type="Node2D"]

[node name="stars" type="Node2D" parent="."]

[node name="stars_far" type="Node2D" parent="stars"]
editor/display_folded = true

[node name="stars_far_0" type="Sprite" parent="stars/stars_far"]
texture = ExtResource( 1 )
centered = false
offset = Vector2( 0, -600 )
script = ExtResource( 2 )

[node name="stars_far_0_1" type="Sprite" parent="stars/stars_far"]
texture = ExtResource( 1 )
centered = false
offset = Vector2( 600, -600 )
script = ExtResource( 2 )

[node name="stars_far_0_2" type="Sprite" parent="stars/stars_far"]
texture = ExtResource( 1 )
centered = false
offset = Vector2( 1200, -600 )
script = ExtResource( 2 )

[node name="stars_far_1" type="Sprite" parent="stars/stars_far"]
texture = ExtResource( 1 )
centered = false
script = ExtResource( 2 )

[node name="stars_far_1_1" type="Sprite" parent="stars/stars_far"]
texture = ExtResource( 1 )
centered = false
offset = Vector2( 600, 0 )
script = ExtResource( 2 )

[node name="stars_far_1_2" type="Sprite" parent="stars/stars_far"]
texture = ExtResource( 1 )
centered = false
offset = Vector2( 1200, 0 )
script = ExtResource( 2 )

[node name="stars_far_2" type="Sprite" parent="stars/stars_far"]
texture = ExtResource( 1 )
centered = false
offset = Vector2( 0, 600 )
script = ExtResource( 2 )

[node name="stars_far_2_1" type="Sprite" parent="stars/stars_far"]
texture = ExtResource( 1 )
centered = false
offset = Vector2( 600, 600 )
script = ExtResource( 2 )

[node name="stars_far_2_2" type="Sprite" parent="stars/stars_far"]
texture = ExtResource( 1 )
centered = false
offset = Vector2( 1200, 600 )
script = ExtResource( 2 )

[node name="stars_close" type="Node2D" parent="stars"]
editor/display_folded = true

[node name="stars_close_0" type="Sprite" parent="stars/stars_close"]
texture = ExtResource( 3 )
centered = false
offset = Vector2( 0, -600 )
script = ExtResource( 2 )
velocity = Vector2( 0, 200 )

[node name="stars_close_0_1" type="Sprite" parent="stars/stars_close"]
texture = ExtResource( 3 )
centered = false
offset = Vector2( 600, -600 )
script = ExtResource( 2 )
velocity = Vector2( 0, 200 )

[node name="stars_close_0_2" type="Sprite" parent="stars/stars_close"]
texture = ExtResource( 3 )
centered = false
offset = Vector2( 1200, -600 )
script = ExtResource( 2 )
velocity = Vector2( 0, 200 )

[node name="stars_close_1" type="Sprite" parent="stars/stars_close"]
texture = ExtResource( 3 )
centered = false
script = ExtResource( 2 )
velocity = Vector2( 0, 200 )

[node name="stars_close_1_1" type="Sprite" parent="stars/stars_close"]
texture = ExtResource( 3 )
centered = false
offset = Vector2( 600, 0 )
script = ExtResource( 2 )
velocity = Vector2( 0, 200 )

[node name="stars_close_1_2" type="Sprite" parent="stars/stars_close"]
texture = ExtResource( 3 )
centered = false
offset = Vector2( 1200, 0 )
script = ExtResource( 2 )
velocity = Vector2( 0, 200 )

[node name="stars_close_2" type="Sprite" parent="stars/stars_close"]
texture = ExtResource( 3 )
centered = false
offset = Vector2( 0, 600 )
script = ExtResource( 2 )
velocity = Vector2( 0, 200 )

[node name="stars_close_2_1" type="Sprite" parent="stars/stars_close"]
texture = ExtResource( 3 )
centered = false
offset = Vector2( 600, 600 )
script = ExtResource( 2 )
velocity = Vector2( 0, 200 )

[node name="stars_close_2_2" type="Sprite" parent="stars/stars_close"]
texture = ExtResource( 3 )
centered = false
offset = Vector2( 1200, 600 )
script = ExtResource( 2 )
velocity = Vector2( 0, 200 )

[node name="EnemySpawner" type="Node" parent="."]
editor/display_folded = true
script = ExtResource( 4 )

[node name="Container" type="Node" parent="EnemySpawner"]

[node name="Timer" type="Timer" parent="EnemySpawner"]

[node name="player" type="KinematicBody2D" parent="."]
position = Vector2( 300, 600 )
script = ExtResource( 5 )

[node name="playerCollision" type="CollisionShape2D" parent="player"]
shape = SubResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="player"]
frames = SubResource( 2 )
frame = 3
playing = true

[node name="danmaku_timer" type="Timer" parent="player"]
autostart = true

[node name="timestop_timer" type="Timer" parent="player"]
wait_time = 0.01

[node name="invincibility_timer" type="Timer" parent="player"]
wait_time = 0.5
one_shot = true

[node name="TimestopFX" type="AudioStreamPlayer" parent="player"]
stream = ExtResource( 9 )

[node name="HUD" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 10 )

[node name="TimestopBar" type="TextureProgress" parent="HUD"]
margin_left = 10.0
margin_top = 10.0
margin_right = 410.0
margin_bottom = 70.0
rect_scale = Vector2( 0.5, 0.5 )
max_value = 5.0
step = 0.01
texture_under = ExtResource( 11 )
texture_over = ExtResource( 12 )
texture_progress = ExtResource( 13 )
fill_mode = 4

[node name="HealthBar" type="TextureProgress" parent="HUD"]
margin_left = 390.0
margin_top = 10.0
margin_right = 790.0
margin_bottom = 70.0
rect_scale = Vector2( 0.5, 0.3 )
value = 100.0
texture_over = ExtResource( 14 )
texture_progress = ExtResource( 15 )
fill_mode = 1

[node name="Shatter" type="Sprite" parent="."]
texture = ExtResource( 16 )
offset = Vector2( 300, 350 )
script = ExtResource( 17 )

[node name="PowerUpSpawner" type="Node" parent="."]
script = ExtResource( 18 )

[node name="Container" type="Node" parent="PowerUpSpawner"]

[node name="Timer" type="Timer" parent="PowerUpSpawner"]
